--- a/themes/Njeen/style.css
+++ b/themes/Njeen/style.css
@@ -44,9 +44,15 @@ QMainWindow {
 	background-color: #222;
 }
 
+Runner {
+	margin: 20px 10px 20px 20px;
+	padding: 20px;
+	background: #eee;
+}
+
 ActionCollection {
-	margin: 20px;
-	max-width: 600px;
+	margin: 20px 20px 20px 10px;
+	min-width: 600px;
 }
 
 ActionFrame {
@@ -74,6 +80,17 @@ TitleBar {
 	margin-bottom: 1px;
 	border-bottom: 1px solid #ddd;
 	padding: 10px;
+}
+
+TitleBar QProgressBar {
+	max-height: 2px;
+	border: none;
+	background: #fff;
+}
+
+TitleBar QProgressBar::chunk {
+	border: none;
+	background: #b1d95f;
 }
 
 TitleBar QLabel {
